2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs: Added support for getting resource
	  string and resource objects. Patch by Georg Wächter.

2007-05-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinHostIndex.cs: Windows may sometimes change
	  the case of assemblies.

2007-05-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs: Use the full add-in id when checking for
	  optional add-in dependencies.
	* Mono.Addins.Description/Extension.cs: Added method for getting a list
	  of node types allowed in an extension.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionNode.cs: Added some null checks.
	* Mono.Addins.Database/AddinScanner.cs: Add-in id is not mandatory.

2007-05-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.csproj: Added missing file.

2007-05-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Serialization/BinaryXmlReader.cs,
	  Mono.Addins.Description/NodeTypeAttribute.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/ExtensionNodeType.cs,
	  Mono.Addins.Description/ExtensionPoint.cs,
	  Mono.Addins.Description/ConditionTypeDescription.cs,
	  Mono.Addins.Database/FileDatabase.cs: Added boolean property to be
	  set to avoid loading documentation information from add-in
	  descriptions (not needed at run-time).
	* Mono.Addins.mdp, Mono.Addins/TypeExtensionNode.cs,
	  Mono.Addins/InstanceExtensionNode.cs,
	  Mono.Addins/ExtensionContext.cs, Mono.Addins/ExtensionNode.cs,
	  Makefile.am: Implemented new InstanceExtensionNode class. It is
	  almost like TypeExtensionNode, but it does not implement the actual
	  object creation, since CreateInstance is abstract.
	  TypeExtensionNode is now a subclass of InstanceExtensionNode which
	  creates an instance of the class specified in the 'class'
	  attribute.
	* Mono.Addins/NodeAttributeAttribute.cs: Allow specifying the
	  description in the constructor.